version/stable/_sources/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/FE/CDB/FBlockCommand.rst.txt
.. vale off



:class:`FBlockCommand`
======================

.. py:class:: ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.FBlockCommand(iFBlockCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.IFBlockCommand)

   Bases: :py:obj:`object`


   
   Represents a FBlock command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: FBlockCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~NodalLoads`
            - Gets the element types.
          * - :py:attr:`~NodalLoadsCount`
            - Gets the element type count.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: NodalLoads
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandNodalLoad]]


   
   Gets the element types.
















   ..
       !! processed by numpydoc !!

.. py:property:: NodalLoadsCount
   :type: Optional[int]


   
   Gets the element type count.
















   ..
       !! processed by numpydoc !!







.. vale on